# syclacademy

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
Code_Exercises/: CMakeLists.txt
Code_Exercises/Exercise_01_Compiling_with_SYCL/: doc.md
Code_Exercises/Exercise_02_Hello_World/: doc.md
Code_Exercises/Exercise_13_Load_Balancing/: solution.cpp
Code_Exercises/Exercise_15_Image_Convolution/: doc.md  reference.cpp  reference_fast.cpp
Code_Exercises/Exercise_16_Coalesced_Global_Memory/: solution.cpp  source.cpp
Code_Exercises/Exercise_17_Vector_Load_and_Store/: CMakeLists.txt  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_17_Vectors/: solution.cpp
Code_Exercises/Exercise_18_Local_Memory_Tiling/: solution.cpp  source.cpp
Code_Exercises/Exercise_19_Work_Group_Sizes/: solution.cpp  source.cpp
Code_Exercises/Exercise_1_Getting_Started/: CMakeLists.txt  solution.cpp  source.cpp
Code_Exercises/Exercise_3_Hello_World/: solution.cpp
Code_Exercises/Exercise_4_Vector_Add/: solution.cpp
Code_Exercises/Exercise_5_Image_Grayscale/: source.cpp
Code_Exercises/Exercise_6_Matrix_Transpose/: solution.cpp  source.cpp
Code_Exercises/Exercise_7_Unified_Shared_Memory_Ext/: CMakeLists.txt  doc.md  solution.cpp  source.cpp
Lesson_Materials/Lecture_10_Data_and_Dependencies/: index.html
Lesson_Materials/Lecture_12_Advanced_Data_Flow/: index.html
Lesson_Materials/Lecture_13_Multiple_Devices/: index.html
Lesson_Materials/Lecture_14_ND_Range_Kernels/: index.html
Lesson_Materials/Lecture_15_Image_Convolution/: index.html
Lesson_Materials/Lecture_17_Vectorization/: index.html
Lesson_Materials/Lecture_18_Local_Memory/: index.html
Lesson_Materials/Lecture_19_Further_Optimizations/: index.html
Lesson_Materials/Lecture_1_What_is_SYCL/: index.html
Lesson_Materials/Lecture_2_Enqueuing_a_Kernel/: index.html
Lesson_Materials/Lecture_3_Managing_Data/: index.html
Lesson_Materials/Lecture_4_Handling_Errors/: index.html
Lesson_Materials/Lecture_5_Device_Discovery/: index.html
Lesson_Materials/Lecture_6_Data_Parallelism/: index.html
(+4 files in other folders)
